<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:gravity="center">


        <android.support.v7.widget.CardView

            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            card_view:cardBackgroundColor="@color/alert_background"
            card_view:cardCornerRadius="48dp"
            card_view:cardElevation="2dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">


                <TextView

                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14sp"
                    android:text="@string/terms"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/green"
                    android:textSize="@dimen/text_size_header"
                    android:textStyle="bold" />

                <TableLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp">

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:text="@string/accetto"
                            android:textColor="#ffffff"
                            android:textSize="11sp" />
                    </TableRow>
                </TableLayout>


                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioGroup
                            xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="vertical">

                            <RadioButton
                                style="@style/RadioButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:layoutDirection="rtl"
                                android:padding="10dp"
                                android:text="PRESTO IL CONSENSO"
                                android:textColor="@color/white"
                                android:textSize="@dimen/text_size_small"


                                />

                            <RadioButton
                                style="@style/RadioButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="8dp"
                                android:layoutDirection="rtl"
                                android:padding="10dp"
                                android:text="NEGO IL CONSENSO"
                                android:textColor="@color/white"
                                android:textSize="@dimen/text_size_small"></RadioButton>

                        </RadioGroup>


                        <TextView
                            android:id="@+id/leggi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/leggi"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/green"
                            android:textSize="@dimen/text_size"
                            android:textStyle="bold" />

                        <View

                            android:layout_width="fill_parent"
                            android:layout_height="2dp"
                            android:layout_marginTop="15dp"
                            android:background="@color/green" />

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="15dp">

                            <TableRow>

                                <TextView
                                    android:layout_width="wrap_content"

                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="15dp"
                                    android:text="@string/aisensi"
                                    android:textColor="#ffffff"
                                    android:textSize="11sp" />
                            </TableRow>
                        </TableLayout>


                        <TableLayout
                            android:layout_width="match_parent"

                            android:layout_height="wrap_content"
                            android:layout_gravity="center"

                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp">

                            <TableRow>

                                <TextView
                                    android:id="@+id/question"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="15dp"
                                    android:text="@string/articolo"
                                    android:textColor="#ffffff"
                                    android:textSize="11sp" />
                            </TableRow>
                        </TableLayout>

                        <!--
                                            <TextView
                         android:shrinkColumns="*"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_gravity="left"
                                                android:layout_marginLeft="10dp"
                                                android:layout_marginTop="10dp"
                                                android:text="@string/articolo"
                                                android:textAlignment="center"
                                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                                android:textColor="@color/white"
                                                android:textSize="15sp"
                                                android:textStyle="bold" />-->


                        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="vertical">

                            <RadioButton
                                style="@style/RadioButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:layoutDirection="rtl"
                                android:padding="10dp"
                                android:text="PRESTO IL CONSENSO"
                                android:textColor="@color/white"
                                android:textSize="@dimen/text_size_small"


                                />

                            <RadioButton
                                style="@style/RadioButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="8dp"
                                android:layoutDirection="rtl"
                                android:padding="10dp"
                                android:text="NEGO IL CONSENSO"
                                android:textColor="@color/white"
                                android:textSize="@dimen/text_size_small"></RadioButton>

                        </RadioGroup>

                        <TextView
                            android:id="@+id/leggi2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/leggi"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/green"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/confirm"
                            android:layout_width="120dp"
                            android:layout_height="40dp"
                            android:layout_below="@+id/card_view"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/border_confirm"
                            android:gravity="center"
                            android:text="OK"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_medium_sec" />


                    </LinearLayout>


                </ScrollView>


            </LinearLayout>
        </android.support.v7.widget.CardView>


    </RelativeLayout>


</RelativeLayout>