<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:gravity="center">


        <android.support.v7.widget.CardView

            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="410dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            card_view:cardBackgroundColor="@color/alert_background"
            card_view:cardCornerRadius="48dp"
            card_view:cardElevation="2dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_closeicon"
                    android:visibility="invisible" />

                <TextView

                    android:id="@+id/textone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Benvenuto"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/green"
                    android:textSize="@dimen/text_size_flarge"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/larea"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size" />


                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <ToggleButton
                        android:id="@+id/switch1"
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="start"
                        android:layout_margin="10dp"
                        android:background="@drawable/ic_switch_default"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textOff=""
                        android:textOn="" />

                    <TableLayout
                        android:layout_gravity="center"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:shrinkColumns="*">

                        <TableRow>

                            <TextView
                                android:textColor="@color/white"
                                android:text="@string/filtro"
                                android:id="@+id/question"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </TableRow>
                    </TableLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="20dp"

                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <ToggleButton
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="start"
                        android:layout_margin="10dp"
                        android:background="@drawable/ic_switch_green"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textOff=""
                        android:textOn="" />


                    <TableLayout
                        android:layout_gravity="center"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:shrinkColumns="*">

                        <TableRow>

                            <TextView
                                android:textColor="@color/white"
                                android:text="@string/filtroon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </TableRow>
                    </TableLayout>


                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>


        <ImageView
            android:id="@+id/ic_correct"
            android:layout_width="70dp"
            android:layout_height="90dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="60dp"
            android:elevation="10dp"
            android:src="@drawable/ic_msg" />


        <Button
            android:id="@+id/done_btn"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_below="@+id/card_view"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_confirm"
            android:gravity="center"
            android:text="OK"
            android:textColor="@color/white" />

    </RelativeLayout>


</RelativeLayout>