<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:gravity="center">


        <android.support.v7.widget.CardView

            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            card_view:cardBackgroundColor="@color/alert_background"
            card_view:cardCornerRadius="48dp"
            card_view:cardElevation="2dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_closeicon"
                    android:visibility="invisible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Attenzione"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/green"
                    android:textSize="@dimen/text_size_flarge"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/staiper"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium"
                        android:layout_marginBottom="5dp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:background="@color/green" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/terminati"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <Button
                            android:id="@+id/btn_confirm"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:layout_margin="5dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:background="@drawable/round_corner"
                            android:text="Continua"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/text_size" />

                        <Button
                            android:id="@+id/btn_cancel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="0.5"
                            android:background="@drawable/round_corner_greenaround"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:text="ANNULLA"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/text_size" />
                    </LinearLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/seannulli"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>


        <ImageView
            android:id="@+id/ic_correct"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="10dp"
            android:elevation="10dp"
            android:src="@drawable/ic_error" />


        <Button
            android:id="@+id/done_btn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@+id/card_view"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_close"
            android:gravity="center"
            android:textColor="@color/white" />


    </RelativeLayout>


</RelativeLayout>